update manifest version

--- a/options.html
+++ b/options.html
@@ -14,7 +14,7 @@ address,a{font-size:93%;color:#999;}
 <div>
 <h1>Good Paste !!</h1>
 <p><img src="pasty.jpg" alt="gyoza" width="800" height="532" /></p>
-<address>Copyright &copy 2010 <a href="http://oov.ch/">oov</a>.</address>
+<address>Copyright &copy 2010 <a href="https://oov.ch/">oov</a>.</address>
 </div>
 </body>
 </html>
