--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<script src="popup.js"></script>
-</head>
-<body>
-<textarea></textarea>
-</body>
+<meta charset="utf-8">
+<script type="module" src="popup.js"></script>
+<nobr style="user-select: none"></nobr>
 </html>
